Clean code spacing in projects. Fix padding.

--- a/app/assets/stylesheets/bootstrap_config.scss
+++ b/app/assets/stylesheets/bootstrap_config.scss
@@ -12,6 +12,7 @@ a:link, a:visited, a:hover, a:focus, a:active {
 
 .header {
   margin-top: 50px;
+  margin-left: 50px;
   position: absolute;
   align: right;
 }
@@ -41,4 +42,18 @@ a:link, a:visited, a:hover, a:focus, a:active {
 
 .content a {
   text-decoration: none !important;
+}
+
+.projects {
+    padding-top: 10px;
+    padding-left: 30px;
+}
+
+.projects h3 {
+  padding-top: 10px;
+  margin: 0px;
+}
+.projects p {
+  padding-bottom: 10px;
+  margin: 0px;
 }
